@@ -10,6 +10,8 @@ $t->get_ok('/')->element_exists('html[lang="en"]')->text_is('title', 'Better gro
   ->text_is('h2', 'Loading...');
 $t->get_ok('/api/i18n/en.json')->status_is(200)
   ->json_is('/dictionary/Autocomplete', 'Autocomplete');
+$t->get_ok('/', {'Accept-Language' => ''})->element_exists('html[lang="en"]');
+$t->get_ok('/', {'Accept-Language' => 'x,y,z'})->element_exists('html[lang="en"]');
 
 note 'dummy translation';
 my $dict = $t->app->i18n->dictionary('no');
@@ -23,7 +25,7 @@ $t->get_ok('/', {'Accept-Language' => 'en;q=0.5,no'})->element_exists('html[lang
 $t->get_ok('/', {'Accept-Language' => 'no-nb,en'})->element_exists('html[lang="no"]')
   ->text_is('title', 'Better group chat - Convos test translation')->text_is('h2', 'Laster...');
 
-$t->get_ok('/api/i18n/no.json')->status_is(200)
+$t->get_ok('/api/i18n/no.json')->status_is(200)->json_is('/available_languages', [qw(en es no)])
   ->json_is('/dictionary/Autocomplete', 'Autofullføring');
 
 note 'spanish';
